src/components/Navbar.css
nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.8rem;
  z-index: 50;
  position: fixed;
  background-color: black;
  width: 100vw;
  box-shadow: rgba(0, 0, 0, 0.5) 0px 5px 6px;
  /* transform-style: preserve-3d; */
}

nav h2 {
  font-weight: 400;
  font-size: 1rem;
}

.logo {
  height: 1rem;
}

.hamburger-icon {
  width: 26px;
  height: 18px;
  transform: rotate(0deg);
  transition: 0.5s ease-in-out;
  cursor: pointer;
}

.hamburger-icon span {
  display: block;
  position: absolute;
  height: 2px;
  width: 100%;
  background: white;
  border-radius: 9px;
  opacity: 1;
  left: 0;
  transform: rotate(0deg);
  transition: 0.25s ease-in-out;
}

.hamburger-icon span:nth-child(1) {
  top: 0px;
  transform-origin: left center;
}

.hamburger-icon span:nth-child(2) {
  top: 8px;
  transform-origin: left center;
}

.hamburger-icon span:nth-child(3) {
  top: 16px;
  transform-origin: left center;
}

.hamburger-icon.open span:nth-child(1) {
  transform: rotate(45deg);
  top: -2px;
  left: 3px;
}

.hamburger-icon.open span:nth-child(2) {
  width: 0%;
  opacity: 0;
}

.hamburger-icon.open span:nth-child(3) {
  transform: rotate(-45deg);
  top: 16px;
  left: 3px;
}

.nav-menu {
  background-color: black;
  color: white;
  width: 100vw;
  height: 0rem;
  display: block;
  position: fixed;
  top: 2.7rem;
  left: 0;
  transition: 450ms ease;
  overflow: hidden;
}

.nav-menu a {
  color: white;
}

.nav-menu.activated {
  height: 100vh;
  transition: 850ms ease;
}

.nav-menu-items {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 2rem 0;
  gap: 2rem;
  text-transform: uppercase;
  font-weight: 600;
}

.nav-menu button {
  padding: 0.5rem 1.2rem;
  width: fit-content;
  background-color: transparent;
  color: white;
  border: 3px solid var(--color-red);
  font-weight: 600;
  border-radius: 5px;
  font-size: 1rem;
}

